ChSimplified css section hearaders

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 
-/*CSS here solely applies to header */
+/* header */
 
 
 
@@ -42,7 +42,7 @@ h2 {
 h3 {}
 
 
-/* CSS here solely applies to section*/
+/* section */
 
 
 .content_form {
@@ -63,7 +63,7 @@ input {
 
 
 
-/*CSS here solely applies to footer*/
+/* footer */
 
 .footer {
 	
