--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,7 @@ p {
 }
 
 legend {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight:700;
 	color:rgb(74, 72, 72);
 	letter-spacing:2px;
@@ -97,7 +97,7 @@ h2 {
 }
 
 
-h3 {	font-size:13px;
+h3 {	font-size:14px;
 	font-weight:700;
 	color:rgb(119, 118, 118);
 	letter-spacing:1px;	
@@ -107,7 +107,7 @@ h3 {	font-size:13px;
 
 
 input {
-	padding-left:20px;
+	;
 
 }
 
@@ -168,19 +168,45 @@ input {
 
 .application-form {
 	width: 100%;
-	
+	background-color:rgb(250, 250, 250);
 }
 
 .application-form label {
 	display: inline-block;
 	width: 10rem;
+	margin-right: 60px;
 }
 
 .application-form input[type="text"] {
-	width: 20rem;
+	width: 30rem;
 	line-height: 1.6rem;
-	border: 1px solid rgb(161, 161, 161);
+	border: 1px solid rgb(226, 226, 226);
+	border-radius: 5px;
+	padding: 5px 0 5px;
 }
+
+.top-button {
+	height: 35px;
+	width: 170px;
+	background-color:rgb(240, 240, 240);
+	border:1px solid rgb(226, 226, 226);
+	font-family:"lato";
+	font-size:14px;
+	
+}	
+
+
+}
+
+.bottom-button {
+	text-align: center;
+	background-color: rgb(66, 143, 245);
+	border-radius: 3px;
+	color: white;
+	height: 35px;
+	width: 170px;
+}	
+
 
 
 /* 
@@ -192,7 +218,7 @@ footer {
 	width: 100%;
 	background-color: #EDEEF1;
 	text-align: center;
-	padding-top: 3% 0 3%;
+	padding: 3% 0 3%;
 }
 
 .lever-logo {
