--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ table {
 
 
 /*
- *  Bondy
+ *  Body------------------------------------------
  */
 
 body {
@@ -58,11 +58,11 @@ body {
 }
 
 p {
-	line-height: 1.8rem;
+	line-height: 2.8rem;
 }
 
 /* 
- * Base
+ * Base----------------------------------------------
  */
 
 
@@ -162,6 +162,8 @@ input {
 	font-family:"lato";
 	font-size:15px;
 	margin-bottom:30%;
+	color:rgb(158, 158, 158);
+	padding-left:10px;
 }
 
 
@@ -187,18 +189,20 @@ input {
 
 .top-button {
 	height: 35px;
-	width: 170px;
+	width: 180px;
 	background-color:rgb(240, 240, 240);
 	border:1px solid rgb(226, 226, 226);
+	border-radius:5px;
 	font-family:"lato";
 	font-size:14px;
+	color:rgb(48, 48, 48);
 	
 }	
 
 
 }
 
-.bottom-button {
+p #bottom_button {
 	text-align: center;
 	background-color: rgb(66, 143, 245);
 	border-radius: 3px;
@@ -210,7 +214,7 @@ input {
 
 
 /* 
- * Footer
+ * Footer------------------------------------------------->
  */
 
 footer {
