--- a/stylesheet.css
+++ b/stylesheet.css
@@ -212,7 +212,7 @@ input {
 	color: white;
 	margin-left:auto;
 	margin-right:auto;
-	margin-bottom:80px
+	margin-bottom:80px;
 	display:block;
 	
 }	
